--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -35,48 +35,44 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - simultaneously with [publication](/docs/data/data_publication) as a research article in a scientific journal, the underlying research data is published in an open data [repository](/docs/topics/repositories) and linked to the article (incl. semantically richly annotated raw and processed data in open data formats for reuse)
 - an unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
-## Quantum Mechanical (QM) numerical simulations
+## Quantum Mechanical (QM) calculations
 
 ### What is it?
-- **Q**uantum **M**echanical numerical simulations are one of the major computational tools to elucidate molecular properties on a first-principles basis
-- solving the Schrödinger equation provides the electronic energy of a molecule/molecular system, from which properties can be derived as higher-order derivatives. Descriptors can also be computed from orbital/density data which is equally available.
+- **Q**uantum **M**echanical calculations are one of the major computational tools to elucidate molecular properties on a first-principles basis
+- solving the Schrödinger equation provides the electronic energy of a molecule/molecular system, from which properties can be derived as higher-order derivatives. Descriptors can also be computed from orbital/density data which is equally available
 
 ### For what?
-- calculated molecular properties include e.g. molecular structures (usually local minima and transition states), energies, spectroscopic parameters/properties, dipole moments, polarisabilities and non-observables such as atomic charges and topological analysis.
+- calculated molecular properties include e.g. molecular structures (usually local minima and transition states), energies, spectroscopic parameters/properties, dipole moments, polarizabilities and non-observables such as atomic charges and topological analysis
 - properties can be calculated prior to conducting experimental measurements to guide synthesis (computational screening) or a posteriori to help interpret experimental results atomistically
-- the application range depends on the level of theory used. Correlated wave function methods are commonly applied to systems with less than 100 atoms, density functional theory (DFT) up to 500 atoms, semiempirical methods can be routinely applied in the range of thousands.
+- the application range depends on the level of theory used. Correlated wave function methods are commonly applied to systems with less than 100 atoms, density functional theory (DFT) up to 500 atoms, semiempirical methods can be routinely applied in the range of thousands
 
 ### What kind of data is generated?
-- data formats depend strongly on the program that is used for the QM calculations, e.g. Gaussian, ORCA, Molpro, TURBOMOLE or Jaguar, but generally formatted text files are used as input and log files. Compressed data formats are used to store wavefunction, density information and operators. Molecular structures are provided in human-readable format.
-- data analysis is carried out using custom scripts. A few programs provide their own scripts for common tasks (such as plotting of molecular orbitals) and dedicated GUIs.
+- data formats depend strongly on the program that is used for the QM calculations, e.g. Gaussian, ORCA, Molpro, TURBOMOLE or Jaguar, but generally formatted text files are used as input and log files. Compressed data formats are used to store wavefunction, density information and operators. Molecular structures are provided in human-readable format
+- data analysis is carried out using custom scripts. A few programs provide their own scripts for common tasks (such as plotting of molecular orbitals) and dedicated GUIs
 
 ### How to do it [FAIR](/docs/topics/fair)?
-- [documentation of all research data](/docs/problems/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using a suitable repository to store the input files, main log and structures files (if not included in the log).
-- reproducibility of calculations to within numerical accuracy can be ensured by storing the input files and adding the program and its version as metadata. Numerical thresholds are well defined. Reproducibility of calculations across different programs and versions is not guaranteed. This warrants the safekeeping of version specific source files for the same time period as the stored data.
+- [documentation of all research data](/docs/problems/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using a suitable repository (e.g. NOMAD, ioChem-BD or a general-purpose repository) to store the input files, main log and structures files (if not included in the log)
+- reproducibility of calculations to within numerical accuracy can be ensured by storing the input files and adding the program and its version (ideally even the compiler version and any compiler flags) as metadata. Numerical thresholds are well defined but reproducibility of calculations across different programs and versions is not guaranteed. This warrants the safekeeping of version specific source files for the same time period as the stored data
 - data analysis scripts should be uploaded to the repository in open file formats, attached directly to the corresponding data entry and accompanied with appropriate documentation
 - if possible, analysis and evaluation of calculations should be conducted with open, non-proprietary software tools
-- simultaneously with [publication](/docs/problems/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/topics/repositories is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
+- simultaneously with [publication](/docs/problems/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/topics/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
 - a unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for the dataset as well as for the journal publication
-- XML and CML (Chemical Markup Language) is used by a few software packages, but is not common practice.
+- XML and CML (Chemical Markup Language) is used by a few software packages but this is not common practice
 
 ### Challenges to make data FAIR
-- no standardized transfer into [open file formats](/docs/topics/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed.
-- lack of open meta-input and output file formats that are necessary to enable full interoperability of different programs and tools used for QM calculations. Particularly concerning is the lack of standards for: z-matrix and xyz file formats, trajectory files in molecular dynamics or structure optimisations, definition of isotopes, potential energy surfaces as well as equations used in the derivation of properties including thermodynamic quantities.
+- no standardized transfer into [open file formats](/docs/topics/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed
+- lack of open meta-input and output file formats that are necessary to enable full interoperability of different programs and tools used for QM calculations. Particularly concerning is the lack of standards for: z-matrix and xyz file formats, trajectory files in molecular dynamics or structure optimisations, definition of isotopes, potential energy surfaces as well as equations used in the derivation of properties including thermodynamic quantities
 
-
-
-
-
-## Molecular Mechanical (MM) numerical simulations
+## Molecular Mechanical (MM) simulations
 
 ### What is it?
-- **M**olecular **M**echanical numerical simulations approximate intra- and intermolecular interactions using simple Newtonian mechanics and neglect quantum effects
-- the system is parametrized with a suitable force field and propagated in time by solving the system’s Newtonian equations of motion. Potentials or modifications of the force field parameters can be applied to extract thermodynamic/kinetic data.
+- **M**olecular **M**echanical simulations approximate intra- and intermolecular interactions using simple Newtonian mechanics and neglect quantum effects
+- the system is parametrized with a suitable force field and propagated in time by solving the system’s Newtonian equations of motion. Potentials or modifications of the force field parameters can be applied to extract thermodynamic/kinetic data
 
 ### For what?
 - systems can be as large as millions of atoms, allowing for the investigation of protein dynamics and protein-ligand interactions on a microsecond timescale. More complex systems such as protein-protein interactions or proteins embedded in a biomembrane can also be simulated
 - simulations of pure liquids, mixtures or interfaces between liquids and solids or gases enable the investigation of such systems
-- explaining and interpreting the behavior of macroscopic systems by investigating them at a microscopic level
+- explaining and interpreting the behaviour of macroscopic systems by investigating them at a microscopic level
 
 ### What kind of data is generated?
 - data formats depend strongly on the program that is used for the MM calculations, e.g. AMBER, CHARMM, GROMACS, LAMMPS or NAMD but in general specifically formatted text files are used as input and log files, and a binary representation for checkpoint and trajectory files
@@ -84,16 +80,16 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 
 ### How to do it [FAIR](/docs/topics/fair)?
 - [documentation of all research data](/docs/problems/data_documentation) and [metadata](/docs/topics/metadata) is carried out digitally using a suitable repository to store the data
-- reproducibility of calculations can be ensured by storing the input file and adding the program and its version as metadata
+- reproducibility of calculations can be ensured by storing the input file and adding the program and its version (ideally including the compiler and any compiler flags) as metadata
 - if possible, analysis and evaluation of calculations should be conducted with open non-proprietary software tools
 - simultaneously with [publication](/docs/problems/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/topics/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
 - a unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ### Challenges to make data FAIR
-- no standardized transfer into [open file formats](/docs/topics/format_standards)
-- development of open meta-input and output file formats is required to handle the multitude of different programs and tools used in MM calculations in accordance with the FAIR principles
-- trajectory files may sometimes be too large to store in commonly used repository environwents, even when using compressed file formats. To make this data FAIR, standards for handling large amounts of data must be developed
-- reproducibility of long time-scale molecular dynamics is unattainable (numerical noise will eventually affect the resulting trajectories). Depending on the numerical accuracy and the specific implementation, deviations can be observed as soon as in the picosecond range. However, thermodynamic averages or other probabilistic measurements should be achieved within a suitable margin of error. This margin would have to be estimated and provided by the authors.
+- no standardized transfer into [open file formats](/docs/topics/format_standards) for different simulation packages
+- development of open meta-input and output file formats is required to handle the multitude of different programs and tools used in MM calculations in accordance with the FAIR principles. Tools such as PLUMED can help users with this problem
+- trajectory files are typically too large to store in commonly used repository environments, even when using compressed file formats. To make this data FAIR, standards for handling large amounts of data must be developed or solutions from other fields applied
+- reproducibility of long time-scale molecular dynamics is unattainable (numerical noise will eventually affect the resulting trajectories, especially in a multicore environment). Depending on the numerical accuracy and the specific implementation, deviations can be observed as soon as in the picosecond range. However, thermodynamic averages or other probabilistic measurements should be achieved within a suitable margin of error. This margin would have to be estimated and provided by the authors of a publication
 
 
 # Methods Data Format Overview
