--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -91,6 +91,6 @@ Additionally, this table may also include further columns for:
 - CAS_RN
 - comment (if required)
 
-Templates for this table are provide as [.ods](/doc/machine-readable_supplementary_table_template.ods), [.xlsx](/doc/machine-readable_supplementary_table_template.xlsx) and [.csv](/doc/machine-readable_supplementary_table_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
+Templates for this table are provided as [.ods](/doc/machine-readable_supplementary_table_template.ods), [.xlsx](/doc/machine-readable_supplementary_table_template.xlsx) and [.csv](/doc/machine-readable_supplementary_table_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
 
-In an ideal world, this table including all the compiled information is provided by an **[ELN](/docs/topics/eln)**. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions. 
+If the experimental work is documented in an **[ELN](/docs/topics/eln)**, this table including all the compiled information by the ELN system. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions. 
