--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -17,7 +17,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 
 ### For what?
 - provides information about the electronic/atomic structure and the chemical environment (e.g. local environmental polarity) of the sample
-- for the characterization of molecular dynamics on the time scale of approx. 10 ps-1 μs (allows e.g. conclusions to be drawn about local nanoviscosity)
+- for the characterisation of molecular dynamics on the time scale of approx. 10 ps-1 μs (allows e.g. conclusions to be drawn about local nanoviscosity)
 - for distance measurements in the range of about 1-8 nm
 
 ### What kind of data is generated?
@@ -60,14 +60,14 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - XML and CML (Chemical Markup Language) is used by a few software packages but this is not common practice
 
 ### Challenges to make data FAIR
-- no standardized transfer into [open file formats](/docs/topics/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed
+- no standardised transfer into [open file formats](/docs/topics/format_standards). All repositories of quantum chemical calculations to date make use of in-house parsers to extract the calculation data from uploaded logs. This trend hinders the improvement of FAIR practices since new developers are not provided with a template for log files. Any new software can only be featured in repositories after a unique parser is developed
 - lack of open meta-input and output file formats that are necessary to enable full interoperability of different programs and tools used for QM calculations. Particularly concerning is the lack of standards for: z-matrix and xyz file formats, trajectory files in molecular dynamics or structure optimisations, definition of isotopes, potential energy surfaces as well as equations used in the derivation of properties including thermodynamic quantities
 
 ## Molecular Mechanical (MM) simulations
 
 ### What is it?
 - **M**olecular **M**echanical simulations approximate intra- and intermolecular interactions using simple Newtonian mechanics and neglect quantum effects
-- the system is parametrized with a suitable force field and propagated in time by solving the system’s Newtonian equations of motion. Potentials or modifications of the force field parameters can be applied to extract thermodynamic/kinetic data
+- the system is parametrised with a suitable force field and propagated in time by solving the system’s Newtonian equations of motion. Potentials or modifications of the force field parameters can be applied to extract thermodynamic/kinetic data
 
 ### For what?
 - systems can be as large as millions of atoms, allowing for the investigation of protein dynamics and protein-ligand interactions on a microsecond timescale. More complex systems such as protein-protein interactions or proteins embedded in a biomembrane can also be simulated
@@ -86,7 +86,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - a unique [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ### Challenges to make data FAIR
-- no standardized transfer into [open file formats](/docs/topics/format_standards) for different simulation packages
+- no standardised transfer into [open file formats](/docs/topics/format_standards) for different simulation packages
 - development of open meta-input and output file formats is required to handle the multitude of different programs and tools used in MM calculations in accordance with the FAIR principles. Tools such as PLUMED can help users with this problem
 - trajectory files are typically too large to store in commonly used repository environments, even when using compressed file formats. To make this data FAIR, standards for handling large amounts of data must be developed or solutions from other fields applied
 - reproducibility of long time-scale molecular dynamics is unattainable (numerical noise will eventually affect the resulting trajectories, especially in a multicore environment). Depending on the numerical accuracy and the specific implementation, deviations can be observed as soon as in the picosecond range. However, thermodynamic averages or other probabilistic measurements should be achieved within a suitable margin of error. This margin would have to be estimated and provided by the authors of a publication
