--- a/docs/20_role/20_research_group_member.mdx
+++ b/docs/20_role/20_research_group_member.mdx
@@ -10,7 +10,7 @@ This article applies to research group members (PhD students, Postdocs and other
 
 ## Motivation
 
-As a research group member, you are the one who is doing the actual research. That means you are generating lots of data while working practically or theoretically, e.g. analytical data or reaction protocols. All these data are accompanied by [metadata](/docs/topics/metadata). As a scientist, you are responsible for the [documentation](/docs/data/data_documentation) of this data in order to ensure that the data can be archived in a [FAIR](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the publication of FAIR data. Therefore, your [supervisor](/docs/role/research_group_leader) should provide you with information on how to handle your data or even a [data management plans](/docs/data/dmp) for good [data organisation](/docs/data/data_organisation) practices.
+As a research group member, you are the one who is doing the actual research. That means you are generating lots of data while working practically or theoretically, e.g. analytical data or reaction protocols. All these data are accompanied by [metadata](/docs/topics/metadata). As a scientist, you are responsible for the [documentation](/docs/data/data_documentation) of this data in order to ensure that the data can be archived in a [FAIR](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the publication of FAIR data. Therefore, your [supervisor](/docs/role/research_group_leader) should provide you with information on how to handle your data or even a [data management plan](/docs/data/dmp) for good [data organisation](/docs/data/data_organisation) practices.
 
 ## Data handling
 
