--- a/docs/20_role/20_research_group_member.mdx
+++ b/docs/20_role/20_research_group_member.mdx
@@ -22,7 +22,7 @@ The most efficient way to properly handle your research data and corresponding [
 
 ## Recommendations – how to start
 
-The use of an ELN for data handling has clear advantages (see [above](#data-handling)). Generally, selecting an [ELN](/docs/topics/eln) and a [repository](/docs/topics/repositories) for data deposition depends on the [chemical sub-domain](/docs/domains/guide). Since 60% of the chemists work synthetically, we recommend the electronic lab notebook [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/) in combination with the repository [Chemotion-Repository](https://www.chemotion-repository.net/welcome). Some advantages of using Chemotion as a whole include:
+The use of an ELN for data handling has clear advantages (see [above](#data-handling)). Generally, selecting an [ELN](/docs/topics/eln) and a [repository](/docs/topics/repositories) for data deposition depends on the [chemical sub-domain](/docs/domains/guide). Since 60% of the chemists work synthetically, the electronic lab notebook [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/) in combination with the repository [Chemotion-Repository](https://www.chemotion-repository.net/welcome) may be the right choice for you. Some advantages of using Chemotion as a whole include:
 
 - [Data life cycle](/docs/topics/data_life_cycle) fully covered—from experiment planning to publication
 - Drawing chemical structures—automatic calculation of quantities and yields
