Minor changes in citations and sources

--- a/docs/40_topics/120_data_availability_statement.mdx
+++ b/docs/40_topics/120_data_availability_statement.mdx
@@ -38,8 +38,7 @@ The data generated and analysed in this study are not openly available due to [r
 
 Data sharing is not applicable, as no new data was generated or analysed in this study.
 
-## Further reading
+## Sources and further information
 
-Federer, L. M., Belder, W. B., Joubert, D. J., Livinski, A., Lu, Y.-L., Snyders, L.N., Thompson, H., Data Sharing in PLOS One: An analysis of Data Availability Statements, Plos One 2018, 13, e0194768, **[[DOI]](https://doi.org/10.1371/journal.pone.0194768)**.
-
-Grant, R., Hrynaszkiewicz, I., The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals, Int. J. Dig. Cur., 2018, 13, 195-203, **[[DOI]](https://doi.org/10.2218/ijdc.v13i1.614)**.
+- [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
+- [The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals](https://doi.org/10.2218/ijdc.v13i1.614)
