--- a/docs/40_topics/75_ct_files.mdx
+++ b/docs/40_topics/75_ct_files.mdx
@@ -26,6 +26,6 @@ There are two variants of these formats in use. Due to limitations in the V2000 
 
 CT files were created by MDL Information Systems, later acquired by Symyx Technologies, merged with Accelrys Corp and renamed to BIOVIA, which is now part of the Dassault Group. These formats can be used **[without any restrictions by licences](https://www.mll-news.com/eugh-zum-urheberrechtlichen-schutz-von-software/)** following European Union directive **[2009/24/EC](http://data.europa.eu/eli/dir/2009/24/oj)** and the EuGH judgement **[C-406/10](https://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:62010CJ0406:EN:HTML)**.
 
-## References
+## Sources and further information
 
-**[CTfile Formats, BIOVIA, San Diego, CA, United States, Dessault Systémes, SE., Vélizy-Villacoublay, France, 2016.](https://discover.3ds.com/ctfile-documentation-request-form)**
+- [CTfile Formats, Standardizing Chemical Representation](https://discover.3ds.com/ctfile-documentation-request-form)
