--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -2,6 +2,8 @@
 title: "Research Group Leader"
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 :::info Applies to:
 This article applies to research group leaders, who plan to organise the RDM of their group.
 :::
