--- a/docs/40_topics/60_best_practice.mdx
+++ b/docs/40_topics/60_best_practice.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Best Practice"
 ---
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 
 # Best Practice
 
@@ -20,7 +22,8 @@ Generally, selecting an ELN and a repository – generic or sub-domain specific 
 
 Using the electronic lab notebook [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/) in combination with the repository [Chemotion-Repository](https://www.chemotion-repository.net/welcome) realises efficient data handling for synthetically working chemists. The entire Chemotion package allows to collect, analyse, process, and store different types of analytical data attached to the reaction procedure in one digital environment. During the seamless export from the ELN into the repository, a [persistent identifier (DOI)](/docs/topics/pid) is assigned to the deposited data – creating one single entry per molecule. This DOI is given in the related publication in addition to the analytical details of one compound (as depicted in figure 1) to link the journal publication to the data publication. Thus, findability of the data files for re-use is guaranteed. Furthermore, the repository of Chemotion is connected to other databases (e.g., [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) to ensure best visibility and a user-friendly search of original research data.
 
-![BestPractice](/img/topics/BestPractice.png) <br/>
+<img alt="Best Practice" src={useBaseUrl('/img/topics/BestPractice.png')} width="500" align="center" vspace="10" hspace="10" />
+
 **Figure 1:** Section of the experimental part in journal publication DOI: [10.1039/d1dt00832c](https://doi.org/10.1039/D1DT00832C), citation of data publication marked in orange.
 
 Several working groups of NFDI4Chem and beyond already deposit research data in the [Chemotion-Repository](https://www.chemotion-repository.net/welcome). For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
