Update under construcion

--- a/docs/30_data/60_data_publication.mdx
+++ b/docs/30_data/60_data_publication.mdx
@@ -3,6 +3,6 @@ title: "Data Publication"
 ---
 
 
-![UnderConstruction](/img/Constr_2bl.png)
+![Under Construction](/img/Constr_2bl.png)
 
-Article under construction.
+This article is under construction.
