--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -109,11 +109,11 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 |HPLC|.xls|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
 |Cyclic voltammetry|.nox   .pssession|~8 MB|proprietary software|.txt|text file|<1 MB|
 |Differential scanning calorimetry (DSC)|.ngb-dsu   .ngb-taa|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Isothermal titration calorimetry (ITC)| ???|???|???|???|???|???|
+|Isothermal titration calorimetry (ITC)| | | | | | |
 |Physisorption|.smp|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
 |Dynamic light scattering (DLS)|.apkw .xlsx|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Atomic force microscopy (AFM)|???|???|???|???|???|???|
-|Transmission electron microscopy (TEM)|???|???|???|???|???|???|
+|Atomic force microscopy (AFM)| | | | | | |
+|Transmission electron microscopy (TEM)| | | | | | |
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
