--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -94,7 +94,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 
 # Methods Data Format Overview
 
-|Analytical method|Exemplary proprietary file extensions|Typical size of propietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
+|Analytical method|Exemplary proprietary file extensions|Typical size of proprietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
 |:------------|:-----------------|:--------|:--------|:------------|:--------------|:--------------|
 |NMR spectroscopy|.fid|<1-50 MB|MNova  Topspin|.jdx  .zip|JCAMP-DX NMReDATA|~1 MB|
 |EPR spectroscopy|.spe .DTA/.DSC|<1 MB|SpinToolbox|.txt .csv|text file, comma-separated values|<1 MB|
