--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -6,7 +6,7 @@ title: "Medicinal/Pharmaceutical Chemistry"
 
 Medicinal chemistry is a chemistry-based, strongly interdisciplinary discipline. It deals with the discovery, development, identification and synthesis of biologically active compounds, the interpretation of their mechanism of action at the molecular level and the metabolism of the active compounds. 
 The interactions of active compounds with their biological target(s) are analysed in silico (chemoinformatics), in vitro and in vivo to determine selectivity and potential in terms of their therapeutic efficacy and safety. 
-Medicinal chemists prepare and/or select suitable compounds for biological evaluation that, if found to be active, could serve as lead compounds. Chemical modifications to optimize these leads ideally result in promising candidates for preclinical studies in drug development potentially followed by clinical studies.
+Medicinal chemists prepare and/or select suitable compounds for biological evaluation that, if found to be active, could serve as lead compounds. Chemical modifications to optimise these leads ideally result in promising candidates for preclinical studies in drug development potentially followed by clinical studies.
 
 :::
 
@@ -14,7 +14,7 @@ Medicinal chemists prepare and/or select suitable compounds for biological evalu
 
 - Synthesis: 
     - Preparation of compounds including combinatorial approaches for biological evaluation in suitable test systems
-    - 
+     
 - Analysis:
     - Characterisation of intermediate and final products
     - Analysis of (quantitative) structure-activity relationships, molecular modelling studies
@@ -23,11 +23,11 @@ Medicinal chemists prepare and/or select suitable compounds for biological evalu
 ## Planning of experiments
 
 Test systems are established, either target-oriented or phenotypic assays, to identify hit compounds. Alternatively, (potential) hit compounds can be selected from available data (e.g. publications) or by virtual screening.
-Starting from promising hit compounds, optimization cycles are performed to improve the properties of the starting compounds. Suitable assay systems are required to obtain the necessary data to assess the compounds’ properties. These include potency efficacy, selectivity, potential bias, water solubility, lipophilicity, pharmacokinetic properties, e.g. bioavailability and metabolic stability, interaction with liver cytochrome P450 enzymes, hERG channel interaction, cell toxicity, potential genotoxicity, etc. The required properties depend e.g. on the indication, and the application route of the drug.
+Starting from promising hit compounds, optimisation cycles are performed to improve the properties of the starting compounds. Suitable assay systems are required to obtain the necessary data to assess the compounds’ properties. These include potency efficacy, selectivity, potential bias, water solubility, lipophilicity, pharmacokinetic properties, e.g. bioavailability and metabolic stability, interaction with liver cytochrome P450 enzymes, hERG channel interaction, cell toxicity, potential genotoxicity, etc. The required properties depend e.g. on the indication, and the application route of the drug.
 
 ## Documentation of experiments
 
--	Documentation of research data and metadata is carried out preferably digitally using a suitable ELN and/or to a manual laboratory notebook in paper form.
+-	Documentation of research data and metadata is carried out preferably digitally using a suitable [ELN](/docs/topics/eln) and/or to a manual laboratory notebook in paper form.
 
 Using an ELN:
 -	Experimental conditions and measurement parameters are noted in the ELN
