--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -52,22 +52,22 @@ Using an ELN:
 |Mass spectrometry|.raw<br/>.d<br/>.baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
 |Gas chromatography|.gcd<br/>.d|~2 MB|proprietary software|.txt|text file|<1 MB|
 |HPLC-UV, HPLC-MS|.xls|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Capillary electrophoresis| 
-|Polarimetry|
-|Melting point or refractory index|
-|TLC: Rf values, TLC-UV, TLC-MS|
-|Binding assays (radioligand, fluorescence-based, surface plasmon resonance (SPR), microscale thermophoresis (MST), isothermal calorimetry (ICT), etc.)|
-|Activity assays (e.g. colorimetric, fluorescence-based, radioactive-based etc.)
-|Docking calculations|
-|Cytotoxicity assays|
-|Determination of water solubility (pH 7.4; maybe at further pH values)|
-|Determination of logD value (lipophilicity)|
-|Peroral bioavailability (e.g. Caco-2 cell permeation assay)|
-|Brain permeation (in vitro prediction, in vivo)|
-|Metabolic stability (rat/mouse/human liver microsomes)|
-|Inhibition of the most important CYP P450 enzymes involved in drug metabolism to assess potential interactions
-|hERG channel interaction|
-|Genotoxicity assays|
+|Capillary electrophoresis| | | | | | |
+|Polarimetry| | | | | | |
+|Melting point or refractory index| | | | | | |
+|TLC: Rf values, TLC-UV, TLC-MS| | | | | | |
+|Binding assays (radioligand, fluorescence-based, surface plasmon resonance (SPR), microscale thermophoresis (MST), isothermal calorimetry (ICT), etc.)| | | | | | |
+|Activity assays (e.g. colorimetric, fluorescence-based, radioactive-based etc.)| | | | | | |
+|Docking calculations| | | | | | |
+|Cytotoxicity assays| | | | | | |
+|Determination of water solubility (pH 7.4; maybe at further pH values)| | | | | | |
+|Determination of logD value (lipophilicity)| | | | | | |
+|Peroral bioavailability (e.g. Caco-2 cell permeation assay)| | | | | | |
+|Brain permeation (in vitro prediction, in vivo)| | | | | | |
+|Metabolic stability (rat/mouse/human liver microsomes)| | | | | | |
+|Inhibition of the most important CYP P450 enzymes involved in drug metabolism to assess potential interactions| | | | | | |
+|hERG channel interaction| | | | | | |
+|Genotoxicity assays| | | | | | |
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
