--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -74,7 +74,7 @@ Alternatively, SMILES, InChI and InChIKey can also be saved as text files by cho
 
 ## Provide machine-readable data as supplementary table
 
-While the data files can be directly added to the dataset, additional information to enhance machine-readability might be provided as a **[supplementary table](https://doi.org/10.1186/s13321-021-00520-4)**. This table should be also provided in a machine-readable text-based format such as a .csv file. 
+While the data files can be directly added to the dataset, additional information to enhance machine-readability might be provided as a **[supplementary table](https://doi.org/10.1186/s13321-021-00520-4)**. This table should be also provided in a machine-readable text-based format such as a .csv file.
 
 It is recommended to add the following columns to this table:
 - number of structure in the research article
@@ -86,11 +86,11 @@ The letter-code and number in your lab journal should be included, as analytical
 
 Additionally, this table may also include further columns for:
 - IUPAC name
-- synonym, i.e. common and trivial names of a compound 
+- synonym, i.e. common and trivial names of a compound
 - PubChem_CIDs
 - CAS_RN
 - comment (if required)
 
-Templates for this table are provided as [.ods](/doc/machine-readable_supplementary_table_template.ods), [.xlsx](/doc/machine-readable_supplementary_table_template.xlsx) and [.csv](/doc/machine-readable_supplementary_table_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
+Templates for this table are provided as [.ods](static\doc\machine-readable_supplementary_table_template.ods), [.xlsx](static\doc\machine-readable_supplementary_table_template.xlsx), and [.csv](static\doc\machine-readable_supplementary_table_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
 
-If the experimental work is documented in an **[ELN](/docs/topics/eln)**, this table includes all the compiled information by the ELN system. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions. 
+If the experimental work is documented in an **[ELN](/docs/topics/eln)**, this table includes all the compiled information by the ELN system. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions.
