--- a/docs/40_topics/110_data_life_cycle.mdx
+++ b/docs/40_topics/110_data_life_cycle.mdx
@@ -2,6 +2,7 @@
 title: "Data Life Cycle"
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
 
 # Research Data Life Cycle
 
@@ -12,7 +13,7 @@ In scientific work, the assurance of [good research practice](https://doi.org/10
 To ensure compliance, professional handling of research data is of particular importance. To illustrate the handling of research data, there are various models such as the [domain model](https://dl.gi.de/handle/20.500.12116/894) or the research data life cycle model. The research data life cycle model describes the lifespan of the data and beyond based on various phases from planning to publication or conscious deletion. For the research data life cycle, there are different approaches to the same model depending on the institution, the funder, etc. Different priorities can be placed on the data life cycle. The approach taken by [NFDI4Chem](http://nfdi4chem.de/) is shown in the figure below.
 <!-- One possible approach is shown in figure 1. -->
 
-![Research Data Life Cycle](../../static/img/topics/researchDataLifeCycle.png)
+<img alt="Research Data Life Cycle" src={useBaseUrl('/img/topics/researchDataLifeCycle.png')} width="600" align="center"/>
 
 ## Phase 1: Experiment Design
 
