--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -16,7 +16,7 @@ Having machine-readable chemical structures as **[CT files](/docs/topics/ct_file
 
 The following will provide a tutorial on how to increase the machine-readability of chemistry research articles by providing machine-readable chemical structures as data files. Moreover, recommendations to provide structure codes and identifiers in a machine-readable supplementary table within the associated dataset are given.
 
-Please note that there are currently limitations with **[SMILES](docs/topics/smiles)** and **[InChI](docs/topics/inchi)** for inorganic and especially organometallic compounds. 
+Please note that there are currently limitations with **[SMILES](/docs/topics/smiles)** and **[InChI](/docs/topics/inchi)** for inorganic and especially organometallic compounds. 
 
 ## Get mol files
 
