--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -83,7 +83,7 @@ It is recommended to add the following columns to this table:
 - InChI and InChIKey
 
 The letter-code and number in your lab journal should be included, as analytical data files in a dataset are frequently named following the lab journal entries.
-
+doc
 Additionally, this table may also include further columns for:
 - IUPAC name
 - synonym, i.e. common and trivial names of a compound
@@ -91,6 +91,6 @@ Additionally, this table may also include further columns for:
 - CAS_RN
 - comment (if required)
 
-Templates for this table are provided as **.ods**, **.xlsx** and **.csv** files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
+Templates for this table are provided as **[.ods](/doc/machine-readable_supplementary_table_template.ods)**, **[.xlsx](/doc/machine-readable_supplementary_table_template.xlsx)** and **[.csv](/doc/machine-readable_supplementary_table_template.csv)** files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
 
 If the experimental work is documented in an **[ELN](/docs/topics/eln)**, this table includes all the compiled information by the ELN system. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions.
