--- a/docs/40_topics/70_machine-readable_chemical_structures.mdx
+++ b/docs/40_topics/70_machine-readable_chemical_structures.mdx
@@ -91,6 +91,8 @@ Additionally, this table may also include further columns for:
 - CAS_RN
 - comment (if required)
 
-Templates for this table are provided as [.ods](./assets/mrst_template.ods), [.xlsx](./assets/mrst_template.xlsx) and [.csv](./assets/mrst_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
+<a target="_blank" href={require('./assets/mrst_template.xlsx').default}>Download this docx</a>
+
+[.ods](./assets/mrst_template.ods), [.xlsx](./assets/mrst_template.xlsx) and [.csv](./assets/mrst_template.csv) files. These template files also take advantage of **[ontologies](/docs/topics/ontology)** to unambiguously identify terms for humans and machines. PubChem_CIDs as well as CAS_RN are easily retrieved in **[PubChem](https://pubchem.ncbi.nlm.nih.gov/)** by searching via SMILES, InChI or InChIKey.
 
 If the experimental work is documented in an **[ELN](/docs/topics/eln)**, this table includes all the compiled information by the ELN system. Chemotion ELN generates **[SMILES](/docs/topics/smiles)**, **[InChI](/docs/topics/inchi)**, InChIKey as well as RInChI and RInChIKey for compounds and reactions.
